--- a/app/src/main/res/layout/small_shedule.xml
+++ b/app/src/main/res/layout/small_shedule.xml
@@ -21,6 +21,7 @@
         android:layout_gravity="right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
         android:id="@+id/linearLayout"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true">
